--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "^1.2.1",
 		"@sveltejs/kit": "^1.5.0",
 		"autoprefixer": "^10.4.7",
 		"daisyui": "^2.51.0",
@@ -30,6 +31,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"dotenv": "^16.0.3",
 		"pocketbase": "^0.11.1"
 	}
 }
